fixed button spacing, moved truncation to css

--- a/src/app/shared/forms/planet-tag-input-dialog.scss
+++ b/src/app/shared/forms/planet-tag-input-dialog.scss
@@ -48,3 +48,21 @@
   padding: 4px;
 }
 
+.icon-spacing,
+.checkbox-spacing {
+  margin-right: 4px;
+}
+
+.button-spacing {
+  margin-right: 4px;
+}
+
+.truncated-name {
+  display: inline-block;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  word-wrap: break-word;
+  overflow-wrap: anywhere;
+}
